use variables and templates

--- a/playbooks/setup_simplest_server.yaml
+++ b/playbooks/setup_simplest_server.yaml
@@ -1,5 +1,7 @@
 - hosts: webservers
-
+  vars:
+    nginx_port: 80
+    root_dir: /usr/share/nginx/html
   tasks:
     - name: install nginx
       apt:
@@ -10,12 +12,12 @@
     - name: copy '../files/index.html' to '/usr/share/nginx/html/index.html'
       copy:
         src: ../files/index.html
-        dest: /usr/share/nginx/html/index.html
+        dest: "{{ root_dir }}/index.html"
       become: yes
 
-    - name: copy '../files/nginx.conf' to '/etc/nginx/nginx.conf'
-      copy:
-        src: ../files/nginx.conf
+    - name: copy '../templates/nginx.conf' to '/etc/nginx/nginx.conf'
+      template:
+        src: ../templates/nginx.conf
         dest: /etc/nginx/nginx.conf
       notify:
         - restart nginx
