--- a/playbooks/uninstall_git.yaml
+++ b/playbooks/uninstall_git.yaml
@@ -7,3 +7,10 @@
         name: git
         state: absent
       become: yes
+
+    - name: delete gitconfig files for every user
+      file:
+          path: "/home/{{ item }}/.gitconfig"
+          state: absent
+      loop: "{{ users }}"
+      become: yes
