apply 'when' conditional, to run 'apt' commands only for the case, when server is Debian

--- a/inv_local.ini
+++ b/inv_local.ini
@@ -4,7 +4,7 @@ local
 
 [webservers]
 first ansible_host=167.71.10.217 ansible_user=root
-second ansible_host=167.99.214.225 ansible_user=root
+centos ansible_host=188.166.103.191 ansible_user=root
 
 [local]
 localhost ansible_connection=local
