--- a/playbooks/install_git.yaml
+++ b/playbooks/install_git.yaml
@@ -6,11 +6,13 @@
         name: git
         state: present
       become: yes
+      when: ansible_os_family == 'Debian'
       tags: install_git
 
     - name: update apt cache
       apt:
         update_cache: yes
+      when: ansible_os_family == 'Debian'
       tags: update_cache
       become: yes
 
