--- a/playbooks/uninstall_git.yaml
+++ b/playbooks/uninstall_git.yaml
@@ -6,6 +6,7 @@
       apt:
         name: git
         state: absent
+      when: ansible_os_family == 'Debian'
       become: yes
 
     - name: delete gitconfig files for every user
