--- a/group_vars/webservers/all.yml
+++ b/group_vars/webservers/all.yml
@@ -1,6 +1,7 @@
 nginx_port: 80
 root_dir: /usr/share/nginx/html
 server_name: "{{ ansible_hostname }}"
+html_title: "This is server {{ ansible_hostname }}"
 
 users:
   - jaime
