--- a/inv_local.ini
+++ b/inv_local.ini
@@ -1,9 +1,12 @@
 [servers:children]
 webservers
+centos_servers
 local
 
 [webservers]
 first ansible_host=167.71.10.217 ansible_user=root
+
+[centos_servers]
 centos ansible_host=188.166.103.191 ansible_user=root
 
 [local]
